--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -4,9 +4,14 @@ html
         title= "Real time web chat"
         script(src='/chat.js')
         script(src='/socket.io/socket.io.js')
+        script(src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous")
     body 
         #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
         .controls
-            input#field(style='width:350px;') 
+            input#name(style='width:150px;' placeholder='author')
+            input#field(style='width:350px;' placeholder='write your message here') 
             input#send(type='button', value='send')
+            br
+        .errorMsg
+            span#wrongInput
 
