--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -10,6 +10,8 @@ html
   
     body 
         .bigBox.container
+            header1.title SNAPCHEAP
+            header3.subtitle the live chat where all the messages disapear if you leave ! 100 discretion ;)
             #content
             .controls
                 input#name( placeholder='author')
