--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -11,7 +11,7 @@ html
     body 
         .bigBox.container
             header1.title SNAPCHEAP
-            header3.subtitle the live chat where all the messages disapear if you leave ! 100 discretion ;)
+            header3.subtitle ...the live chat where all the messages disapear when you leave ! 100% discretion ;)
             #content
             .controls
                 input#name( placeholder='author')
